<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:gravity="center_horizontal"
                        android:text="@string/title1"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:gravity="center_horizontal"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="center_horizontal"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:entries="@array/Hardware"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:entries="@array/Hardware"
                        android:gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@android:drawable/btn_dialog" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:background="#C9C2C2"
                        android:text="@string/ranking"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_weight="0"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ranking" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:background="#C9C2C2"
                        android:text="@string/price"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="44dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="8dp"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/price" />

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="0"
                        android:background="#C9C2C2"
                        android:text="@string/fps"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView57"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C9C2C2"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView60"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C9C2C2"
                        android:text="TextView"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="50dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="8dp"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/dota" />

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView51"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/csgo" />

                    <TextView
                        android:id="@+id/textView58"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView59"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView52"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="0"
                        android:background="#C9C2C2"
                        android:text="@string/bench"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView61"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C9C2C2"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView62"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C9C2C2"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView53"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parallax"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView54"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView55"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView56"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:background="#C9C2C2"
                        android:text="@string/overall"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/textView63"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView64"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TextView"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView65"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TextView"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>